<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:translationZ="90sp"
    tools:context=".ui.main.SMSFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/view"
            android:layout_width="348dp"
            android:layout_height="272dp"
            android:layout_marginStart="-245dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/tab"
            app:layout_constraintStart_toStartOf="@+id/smsSwitch"
            app:layout_constraintTop_toBottomOf="@+id/smsSwitch" />

        <Switch
            android:id="@+id/smsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:text="@string/smsActif"
            android:textColor="@color/BlueIceberg"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reponseEditText"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/contenue"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minHeight="48dp"
            android:scrollbars="vertical"
            android:textColor="@color/BlueIceberg"
            android:textColorHint="@color/BlueSky"
            android:verticalScrollbarPosition="right"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/reponse"
            android:textColor="@color/BlueIceberg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <Button
            android:id="@+id/sauvegarderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/corner_round"
            android:text="@string/boutonSauvegarder"
            android:textColor="@color/BlueBaby"
            app:icon="@drawable/ic_baseline_check_24"
            app:iconTint="@color/GreenMantis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


<!--        <View-->
<!--            android:id="@+id/grisage"-->
<!--            android:layout_width="177dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginTop="48dp"-->
<!--            android:background="@drawable/corner_round"-->
<!--            android:backgroundTint="#B44A525A"-->
<!--            android:translationZ="90dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/view" />-->

        <TextView
            android:id="@+id/actualMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxWidth="290dp"
            android:maxHeight="100dp"
            android:maxLines="5"
            android:minWidth="290dp"
            android:minHeight="100dp"
            android:scrollbars="vertical"
            android:text="TextView"
            android:textColor="@color/BlueIceberg"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Message actuel:"
            android:textColor="@color/BlueIceberg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/sauvegarderButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>